// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
.c0 {
  min-height: 1px;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    margin: 8px 0;
    padding: 8px 16px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
  class="c0"
/>
`;

exports[`ProductMultiGrid renders correctly 1`] = `
Array [
  .c0 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    -webkit-flex: 0 0 40%;
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
  }
}

@media (min-width:36em) {
  .c0 {
    margin: 8px 0;
    padding: 8px 16px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
    class="c0"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2"
    >
      foo
    </h6>
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
    >
      bar
    </h5>
  </div>,
  .c0 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c0:first-child {
  border-top: 0;
  border-left: 0;
}

@media (min-width:36em) {
  .c0 {
    -webkit-flex: 0 0 40%;
    -ms-flex: 0 0 40%;
    flex: 0 0 40%;
    max-width: 40%;
  }
}

@media (min-width:36em) {
  .c0 {
    margin: 8px 0;
    padding: 8px 16px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
    class="c0"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2"
    >
      bar
    </h6>
    <h5
      class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
    >
      foo
    </h5>
  </div>,
]
`;
